# aipm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  aipm.toml  cliff.toml  clippy.toml  codecov.yml  dist-workspace.toml  release-plz.toml  rustfmt.toml
crates/aipm/: CHANGELOG.md  Cargo.toml
crates/aipm-pack/: CHANGELOG.md  Cargo.toml
crates/aipm-pack/src/: error.rs  main.rs  wizard.rs  wizard_tty.rs
crates/aipm-pack/src/snapshots/: aipm_pack__wizard__tests__package_prompts_all_flags_snapshot.snap  aipm_pack__wizard__tests__package_prompts_name_flag_snapshot.snap  aipm_pack__wizard__tests__package_prompts_no_flags_snapshot.snap  aipm_pack__wizard__tests__package_prompts_type_flag_snapshot.snap  aipm_pack__wizard__tests__resolve_package_custom_name_snapshot.snap  aipm_pack__wizard__tests__resolve_package_defaults_snapshot.snap  aipm_pack__wizard__tests__resolve_package_each_type_snapshot.snap  aipm_pack__wizard__tests__resolve_package_with_both_flags_snapshot.snap  aipm_pack__wizard__tests__resolve_package_with_name_flag_snapshot.snap  aipm_pack__wizard__tests__resolve_package_with_type_flag_snapshot.snap  aipm_pack__wizard__tests__styled_render_config_snapshot.snap
crates/aipm-pack/tests/: init_e2e.rs
crates/aipm/src/: error.rs  lsp.rs  main.rs  scan_summary.rs  wizard.rs  wizard_tty.rs
crates/aipm/src/lsp/: helpers.rs
crates/aipm/src/snapshots/: aipm__wizard__tests__migrate_cleanup_with_migrated_snapshot.snap  aipm__wizard__tests__package_prompts_all_flags_snapshot.snap  aipm__wizard__tests__package_prompts_name_flag_snapshot.snap  aipm__wizard__tests__package_prompts_no_flags_snapshot.snap  aipm__wizard__tests__package_prompts_type_flag_snapshot.snap  aipm__wizard__tests__resolve_package_custom_name_snapshot.snap  aipm__wizard__tests__resolve_package_defaults_snapshot.snap  aipm__wizard__tests__resolve_package_each_type_snapshot.snap  aipm__wizard__tests__resolve_package_with_both_flags_snapshot.snap  aipm__wizard__tests__resolve_package_with_name_flag_snapshot.snap  aipm__wizard__tests__resolve_package_with_type_flag_snapshot.snap  aipm__wizard__tests__resolve_workspace_all_flags_no_prompts_snapshot.snap  aipm__wizard__tests__resolve_workspace_both_snapshot.snap  aipm__wizard__tests__resolve_workspace_custom_name_snapshot.snap  aipm__wizard__tests__resolve_workspace_decline_starter_snapshot.snap  aipm__wizard__tests__resolve_workspace_empty_name_uses_default_snapshot.snap  aipm__wizard__tests__resolve_workspace_flags_bypass_snapshot.snap  aipm__wizard__tests__resolve_workspace_manifest_only_snapshot.snap  aipm__wizard__tests__resolve_workspace_marketplace_only_snapshot.snap  aipm__wizard__tests__resolve_workspace_name_flag_snapshot.snap  aipm__wizard__tests__styled_render_config_snapshot.snap  aipm__wizard__tests__workspace_prompts_all_flags_snapshot.snap  aipm__wizard__tests__workspace_prompts_both_flags_snapshot.snap  aipm__wizard__tests__workspace_prompts_no_flags_snapshot.snap  aipm__wizard__tests__workspace_prompts_no_starter_flag_snapshot.snap
crates/aipm/tests/: cli_tests.rs  init_e2e.rs  init_engine_e2e.rs  install_e2e.rs  issue_725_e2e.rs  lint_e2e.rs  make_e2e.rs  migrate_e2e.rs  pack_init_e2e.rs  verbosity_e2e.rs
crates/libaipm/: CHANGELOG.md  Cargo.toml
crates/libaipm-engine-spec/: CHANGELOG.md  Cargo.toml  build.rs
crates/libaipm-engine-spec/data/: engine-api-changelog.md  engine-api-schema.json
crates/libaipm-engine-spec/src/: generated.rs  helpers.rs  lib.rs  types.rs
crates/libaipm-engine-spec/tests/: aipm_toml_schema_drift.rs  canonical_name.rs  generated_tables.rs  schema_export_drift.rs  schema_validation.rs
crates/libaipm/src/: acquirer.rs  cache.rs  discovery.rs  discovery_legacy.rs  engine.rs  frontmatter.rs  fs.rs  init.rs  installed.rs  lib.rs  locked_file.rs  logging.rs  marketplace.rs  path_security.rs  platform.rs  security.rs  spec.rs  version.rs  wizard.rs  workspace_init.rs
crates/libaipm/src/discovery/: classify.rs  instruction.rs  layout.rs  legacy_compat.rs  mod.rs  scan_report.rs  source.rs  test_env.rs  types.rs  walker.rs
crates/libaipm/src/generate/: marketplace.rs  mod.rs  plugin_json.rs  settings.rs
crates/libaipm/src/installer/: error.rs  manifest_editor.rs  mod.rs  pipeline.rs
crates/libaipm/src/linker/: directory_link.rs  error.rs  gitignore.rs  hard_link.rs  link_state.rs  mod.rs  pipeline.rs  security.rs
crates/libaipm/src/lint/: config.rs  diagnostic.rs  error.rs  mod.rs  path_guard.rs  reporter.rs  rule.rs
crates/libaipm/src/lint/rules/: agent_missing_tools.rs  broken_paths.rs  hook_legacy_event.rs  hook_unknown_event.rs  import_resolver.rs  instructions_oversized.rs  known_events.rs  marketplace_field_mismatch.rs  marketplace_source_resolve.rs  misplaced_features.rs  mod.rs  plugin_missing_manifest.rs  plugin_missing_registration.rs  plugin_required_fields.rs  scan.rs  skill_desc_too_long.rs  skill_invalid_shell.rs  skill_missing_desc.rs  skill_missing_name.rs  skill_oversized.rs  (+4 more)
crates/libaipm/src/lockfile/: error.rs  mod.rs  reconcile.rs  types.rs
crates/libaipm/src/make/: action.rs  discovery.rs  engine_features.rs  error.rs  mod.rs  templates.rs
crates/libaipm/src/manifest/: builder.rs  error.rs  mod.rs  types.rs  validate.rs
crates/libaipm/src/migrate/: agent_detector.rs  cleanup.rs  command_detector.rs  copilot_agent_detector.rs  copilot_extension_detector.rs  copilot_hook_detector.rs  copilot_lsp_detector.rs  copilot_mcp_detector.rs  copilot_skill_detector.rs  detector.rs  discovery.rs  dry_run.rs  emitter.rs  error.rs  hook_detector.rs  mcp_detector.rs  mod.rs  output_style_detector.rs  reconciler.rs  registrar.rs  skill_common.rs  skill_detector.rs  unified.rs
crates/libaipm/src/registry/: config.rs  error.rs  git.rs  index.rs  mod.rs
crates/libaipm/src/resolver/: error.rs  mod.rs  overrides.rs
crates/libaipm/src/store/: error.rs  hash.rs  layout.rs  mod.rs
crates/libaipm/src/workspace/: error.rs  mod.rs
crates/libaipm/src/workspace_init/: error.rs  mod.rs
crates/libaipm/tests/: bdd.rs
(+369 files in other folders)
