[package]
name = "aipm"
description = "AI Plugin Manager — consumer CLI (install, validate, doctor, link)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libaipm = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap-verbosity-flag = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
