[package]
name = "libaipm-engine-spec"
description = "Engine API schema source-of-truth for AIPM (canonical Rust types + build-time generated tables)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
phf = { workspace = true }
bitflags = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
phf_codegen = { workspace = true }
prettyplease = { workspace = true }
syn = "2"
proc-macro2 = "1"
quote = "1"

[lints]
workspace = true
