[package]
name = "libaipm"
description = "Core library for AIPM — manifest parser, resolver, store, lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
assert_cmd = { workspace = true }
insta = { workspace = true }

[[test]]
name = "bdd"
harness = false

[lints]
workspace = true
