[package]
name = "libaipm"
description = "Core library for AIPM — manifest parser, resolver, store, lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }
git2 = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }
annotate-snippets = { workspace = true }
anstyle = { workspace = true }
anstyle-query = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[features]
wizard = ["dep:inquire"]

[dependencies.inquire]
workspace = true
optional = true

[dev-dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
assert_cmd = { workspace = true }
insta = { workspace = true }

[[test]]
name = "bdd"
harness = false

[lints]
workspace = true
